# lopnor

./: .gitignore  README.md  build.gradle  channel.txt  gradle.properties  settings.gradle
ai/: CMakeLists.txt  build.gradle
ai/src/androidTest/java/com/beiying/ai/: ExampleInstrumentedTest.kt
ai/src/main/: AndroidManifest.xml
ai/src/main/cpp/opencv/: CascadeDetectorAdapter.cpp  CascadeDetectorAdapter.h  imageutil.cpp  videoutil.cpp
ai/src/main/java/com/beiying/ai/: ImageAI.kt  VideoAI.kt
ai/src/test/java/com/beiying/ai/: ExampleUnitTest.kt
base/: CMakeLists.txt  build.gradle
base/src/androidTest/java/com/beiying/lopnor/base/: ExampleInstrumentedTest.java
base/src/main/: AndroidManifest.xml
base/src/main/cpp/crypt/: CMakeLists.txt  Md5.cpp  crypt.cpp
base/src/main/java/com/beiying/lopnor/base/: BaseToolbarActivity.kt  LoadingHelper.kt  OpenglUtil.kt
base/src/main/java/com/beiying/lopnor/base/concurrent/: ByExecutor.kt
base/src/main/java/com/beiying/lopnor/base/crypt/: CryptUtil.kt
base/src/main/java/com/beiying/lopnor/base/demo/: DemoActivity.kt
base/src/main/java/com/beiying/lopnor/base/demo/loading/: NavIconType.java  ToolbarAdapter.java
base/src/main/java/com/beiying/lopnor/base/log/: ByConsolePrinter.kt  ByFilePrinter.kt  ByLog.kt  ByLogConfig.kt  ByLogFormatter.kt  ByLogManager.kt  ByLogModel.kt  ByLogPrinter.kt  ByLogType.kt  ByStackTraceFormatter.kt  ByStackTraceUtil.kt  ByThreadFormatter.kt  ByViewPrinter.kt  ByViewPrinterProvider.kt  CrashHandler.kt  README.md
base/src/main/java/com/beiying/lopnor/base/recylerview/: AdapterChildItemLongClickListener.kt  AdapterChildItemOnClickListener.kt  AdapterItemLongClickListener.kt  AdapterItemOnClickListener.kt  AdapterLoadMoreClickListener.kt  AdapterLoadMoreListener.kt  BaseAdapter.kt  BaseViewHolder.kt  LoadMoreView.kt  NormalFragmentPagerAdapter.kt
base/src/main/java/com/beiying/lopnor/base/restful/: ByCall.kt  ByConvert.kt  ByHttpCallback.kt  ByInterceptor.kt  ByRequest.kt  ByResponse.kt  ByRestful.kt  MethodParser.kt  README.md
base/src/main/java/com/beiying/lopnor/base/restful/annotation/: BaseUrl.kt  CacheStrategy.kt  DELETE.kt  Filed.kt  GET.kt  Headers.kt  POST.kt  PUT.kt  Path.kt
base/src/main/java/com/beiying/lopnor/base/ui/: BaseView.kt
base/src/main/java/com/beiying/lopnor/base/ui/extensions/: RecyclerViewExtensions.kt
base/src/main/java/com/beiying/lopnor/base/ui/tab/: ByTabBottom.kt  IByTab.kt  (+4 more)
base/src/main/java/com/beiying/lopnor/base/utils/: BitmapUtil.kt  ImageUtil.kt  RomUtil.java  SystemInfoUtil.java  ViewUtil.kt  ViewUtils.java
base/src/main/res/layout/: activity_base_toolbar.xml  layout_load_more.xml
base/src/main/res/values/: colors.xml  strings.xml  styles.xml
base/src/test/java/com/beiying/lopnor/base/: ExampleUnitTest.java
bymedia/: CMakeLists.txt  build.gradle
bymedia/src/androidTest/java/com/beiying/media/: ExampleInstrumentedTest.java
bymedia/src/main/: AndroidManifest.xml
bymedia/src/main/cpp/: jpeg_compress.cpp
bymedia/src/main/cpp/gles3/: CMakeLists.txt  JniImpl.cpp
bymedia/src/main/cpp/gles3/render/: EGLRender.h  GLRenderContext.cpp  GLRenderContext.h
bymedia/src/main/cpp/gles3/sample/: GLSampleBase.h  NV21TextureMapSample.h  TextureMapSample.cpp  TextureMapSample.h  TriangleSample.cpp  TriangleSample.h
bymedia/src/main/cpp/gles3/util/: ByteFlowLock.h  GLUtils.cpp  GLUtils.h  ImageDef.h  LogUtil.h
bymedia/src/main/java/com/beiying/media/: MainActivity.java  MediaApplication.java
bymedia/src/main/java/com/beiying/media/audio/: BYAudioManager.kt
bymedia/src/main/java/com/beiying/media/image/: BigImageView.kt  BitImageView.kt  BitmapUtil.kt  NeBigView.java
bymedia/src/main/java/com/beiying/media/image/ui/: BigImageView.kt  NeBigView.java
bymedia/src/main/java/com/beiying/media/jpeg/: Turbo.kt
bymedia/src/main/java/com/beiying/media/opengl/: BaseRender.kt  BaseRenderActivity.kt  BaseShape.kt  BaseShapeRender.kt  BaseShapeView.kt  GraphActivity.kt  NativeES3Render.kt  NativeGraphActivity.kt  NativeRenderGLSurfaceView.kt  OpenGLActivity.kt  OpenGLConstants.kt  Point.kt  PointRender.kt  ShaderHelper.kt  TextResourceReader.kt  VertexArray.kt
bymedia/src/main/java/com/beiying/media/opengl/render/: BaseRender.kt  BaseShapeRender.kt  GLRender.kt  NativeES3Render.kt  PointRender.kt
bymedia/src/main/java/com/beiying/media/opengl/shape/: BaseShape.kt  Line.kt  Point.kt  Triangle.kt
bymedia/src/main/module/: AndroidManifest.xml
bymedia/src/main/res/layout/: layout_main.xml  layout_native_graph.xml
bymedia/src/main/res/raw/: line_vertex_shader.glsl  point_vertex_shader.glsl
bymedia/src/main/res/values/: strings.xml
bymedia/src/test/java/com/beiying/media/: ExampleUnitTest.java
ffplayer/: CMakeLists.txt  build.gradle
ffplayer/libs/includes/libx264/: x264.h
ffplayer/src/androidTest/java/com/beiying/ffplayer/: ExampleInstrumentedTest.kt
ffplayer/src/main/: AndroidManifest.xml
ffplayer/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  AudioPlayChannel.cpp  AudioPlayChannel.h  BasePlayChannel.h  JNIEnvHelper.cpp  JNIEnvHelper.h  JavaCallHelper.cpp  JavaCallHelper.h  PlayerController.cpp  PlayerController.h  SafeQueue.cpp  SafeQueue.h  VideoChannel.cpp  VideoChannel.h  VideoPlayChannel.cpp  VideoPlayChannel.h  avplayer.c  avplayer.cpp  backup.txt  livepusher.cpp  logger.h  macro.h  media_info.c
ffplayer/src/main/cpp/librtmp/: CMakeLists.txt
ffplayer/src/main/java/com/beiying/ffplayer/: AudioChannel.kt  CameraHelper.kt  FFPlayer.kt  LivePusher.kt  MainActivity.kt  MyApplication.kt  OpenCvActivity.kt  VideoChannel.kt  VideoView.java
ffplayer/src/main/java/com/beiying/ffplayer/beauty/: AbstractFilter.kt  BeautyRender.kt  BeautyView.kt  CameraFilter.kt  CameraHelperWithTexture.kt  ScreenFilter.kt  ShaderHelper.kt  TextResourceReader.kt
ffplayer/src/main/module/: AndroidManifest.xml
ffplayer/src/main/res/layout/: activity_main.xml  activity_opencv.xml
ffplayer/src/main/res/raw/: base_frag.frag  base_vertex.vert  camera_frag.frag  camera_vertex.vert
ffplayer/src/test/java/com/beiying/ffplayer/: ExampleUnitTest.kt
(+351 files in other folders)
